--- a/Readme.me
+++ b/Readme.me
@@ -1,1 +1,1 @@
-Source code for TechNet article.
+Source code for TechNet article. https://social.technet.microsoft.com/wiki/contents/articles/51686.vb-net-reading-images-from-sql-server.aspx
